# TuringMachine

./: CMakeLists.txt  LICENSE  README.md
src/app/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  main.cpp  main.qrc  mainwindow.cpp  mainwindow.h
src/lib/: CMakeLists.txt  Exception.hpp  TuringMachine.cpp  TuringMachine.hpp  exception.h  function.h  turingmachine.cpp  turingmachine.h
src/turingmachinelogic/: CMakeLists.txt  exception.h  function.h  turingmachine.cpp  turingmachine.h
